2003-11-05  Naba Kumar  <naba@gnome.org>

	* data/gdb.init: Sets host's charset to ascii to solve debugger
	freeze up due to uninitialized strings in target program.

	* src/mainmenu_callbacks.c, src/watch_cbs.c, src/message-manager.[cc,h]:
	Fixed a crash bug with 'Add expression in watch'. Bug #822017
	
	* NEWS: Updated.
	
2003-11-04  Naba Kumar  <naba@gnome.org>

	* scintilla/Makefile.am, widgets/Makefile.am: Fixed distribution
	problems.
	
	Patch from: Jean-Noel Guiheneuf <jnoel@saudionline.com.sa
	* src/aneditor.cxx, src/aneditor.h, src/controls.c, src/main_menubar.c,
	src/main_menubar.h, src/main_menubar_def.h, src/mainmenu_callbacks.c,
	src/mainmenu_callbacks.h: Added emacs style c/c++ custom indentation
	in file headers.
	
	* src/search-replace.c: Fixed infinite loop bug.
	* start-with.c: Fixed a crash bug with "Open last project".
	
	Patch from: Karl-Heinz Brünen  <k.bruenen@eprosoft.de
	* scintilla/Makefile.am: Fixed compiler option.

2003-10-16  Naba Kumar  <naba@gnome.org>

	Patch from: Jean-Noel Guiheneuf <jnoel@saudionline.com.sa
	* src/text_editor.c: Fixed autoformat.
	
2003-10-15  Naba Kumar  <naba@gnome.org>

	* src/anjuta_cbs.c: Used ALT+number for editor tab browsing, instead
	of CTRL+number.
	
2003-10-09  Naba Kumar  <naba@gnome.org>

	* src/cvs_gui.c: Fixed a UI bug (hides the unwanted frame).
	
2003-10-08  Naba Kumar  <naba@gnome.org>

	* src/source.c: Fixed a GETTEXT typo error.
	* anjuta.glade: Made 'Sorted in order you open them' default option
	for editor tabs.

	Patch from: Jean-Noel Guiheneuf  <jnoel@saudionline.com.sa>
	* anjuta.glade, data/properties/anjuta.properties:
	Fixed the freeze of the "Preferences" combos at the first Anjuta
	init is generated by:
		- a not complete translation of preferences.c file
		- a difference between 2 names in anjuta.glade and
		anjuta.properties (arrows --> Arrows , bottom --> Bottom)
		- the same name given to 3 combos (anjuta.glade).
		
	* src/find_text.c: If the "whole document" mode is selected,